compiler/tests/invalid_programs/syntax/invalid_class.jm
#!SyntaxError

class "foo"
  bar:Int
end
